--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,4 @@ x64/Release/movie.mp4
 KalmanFilter/x64/Debug/BuildLog.htm
 KalmanFilter/x64/Release/BuildLog.htm
 KalmanFilter/x64/Release/BuildLog.htm
+x64/Debug/edge.png
