--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,4 @@ KalmanFilter/x64/Debug/BuildLog.htm
 KalmanFilter/x64/Release/BuildLog.htm
 KalmanFilter/x64/Release/BuildLog.htm
 x64/Debug/edge.png
+x64/Debug/result.png
